- [ADD] Function `steffan-westcott.clj-otel.instrumentation.runtime-telemetry-java8/close!` to stop JVM telemetry.
`steffan-westcott.clj-otel.instrumentation.runtime-telemetry-java8/register!` now returns a collection of `AutoCloseable`.
- [MAINT] Removed `:dev` alias for development.
- [MAINT] Reworked examples to be easier to run.
Added load generator applications to microservices examples.

=== `0.2.3` (2023-06-18)

- [ADD] Support for programmatic configuration of `MeterProvider` for metrics export.
- [ADD] Module `clj-otel-exporter-prometheus` for programmatic configuration of metrics export to Prometheus
- [FIX] `steffan-westcott.clj-otel.util/duration` should convert `[amount ^TimeUnit unit]` to `Duration`
- Bump deps:
* [MAINT] OpenTelemetry `1.27.0`
** [BREAK] The default value for autoconfiguration property `otel.logs.exporter` has changed from `none` to `otlp`
** [BREAK] Module `clj-otel-instrumentation-runtime-metrics` has been renamed and split into modules `clj-otel-instrumentation-runtime-telemetry-java8` and `clj-otel-instrumentation-runtime-telemetry-java17`
* [MAINT] gRPC `1.56.0`
* [MAINT] Pedestal `0.6.0`

=== `0.2.2` (2023-06-05)

- [ADD] Opt-in feature xref:doc/concepts.adoc#_bound_context[bound context], a Clojure dynamic var that overrides the default `context` or `parent` parameter value for `clj-otel` functions.
This feature is intended to simplify asynchronous code by eliminating explicit context passing.
Existing code that uses the current context or explicit context parameter values is unaffected.
- [FIX] Convert key names of entries added to OpenTelemetry attributes to snake_case.
This applies to resources, spans and metrics.
- [FIX] Do not transform key names of entries added to OpenTelemetry context or baggage.
- [ADD] Function `set-attribute-name-fn!` to override setting of OpenTelemetry attribute key names.
- [MAINT] Remove Jaeger exporters from examples, since they will be deprecated soon.