@@ -2,4 +2,4 @@
 
 {:paths ["src"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
-         io.opentelemetry/opentelemetry-exporter-logging-otlp {:mvn/version "1.27.0"}}}
+         io.opentelemetry/opentelemetry-exporter-logging-otlp {:mvn/version "1.28.0"}}}
